# ohh-crumbs-app

./: .gitignore  README.md  app.py  auth_config.py  dashboard.py  database.py  ingredients.py  inventory_alerts.py  migrate_db.py  models.py  pdf_reports.py  profit_analysis.py  pyproject.toml  receipt_parser.py  recipes.py  requirements.txt  square_api.py  square_setup.py  styling.py  suppliers.py  utils.py
.streamlit/: config.toml  secrets.toml.example
